// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateConfigs.constructConfig with environment 1`] = `
Object {
  "environment": "uat",
  "featureFlags": Object {},
  "host": "testTenant.e.sparkpost.com",
  "smtpAuth": Object {
    "enabled": true,
    "port": 587,
    "username": "testTenant",
  },
  "support": Object {
    "algolia": Object {
      "apiKey": "9ba87280f36f539fcc0a318c2d4fcfe6",
      "appID": "SFXAWCYDV8",
    },
    "enabled": true,
  },
  "tenantId": "testTenant",
}
`;

exports[`generateConfigs.constructConfig with unknown environment 1`] = `
Object {
  "featureFlags": Object {},
  "host": "testTenant.e.sparkpost.com",
  "smtpAuth": Object {
    "enabled": true,
    "port": 587,
    "username": "testTenant",
  },
  "support": Object {
    "algolia": Object {
      "apiKey": "9ba87280f36f539fcc0a318c2d4fcfe6",
      "appID": "SFXAWCYDV8",
    },
    "enabled": true,
  },
  "tenantId": "testTenant",
}
`;
